# cobaya

./: .gitignore  README.rst  chain-state.hdf5  chain.input.yaml  chain.updated.yaml  job_script_SLURM  job_script_SLURM_eos  job_script_SLURM_ulysses  jobscript_template.sh  requirements.txt  runjob.sh
FRA/: Pk-anformulas4bacco.ipynb  (+18 more)
FRA-params/: AxiCLASS.yaml  AxiCLASS4test24.yaml  AxiCLASS_Q0.yaml  AxiCLASS_Q0_testNautilus.yaml  AxiCLASS_Q0_withbx.yaml  AxiCLASS_boss+planck.yaml  AxiCLASS_cmb.yaml  AxiCLASS_planck_only.yaml  AxiCLASS_withbr.yaml  AxiCLASS_withbx.yaml  ULAlike.yaml  boss+planck.yaml  bx_fx_boss.yaml  fx_boss.yaml  grid_fx.yaml  ini_pbj_boss.yaml  naut_gaussian.yaml  old_planck_cosmopower.yaml  param_pbj.yaml  pbj_boss_b1only.yaml  pbj_boss_class.yaml  pbj_boss_full.yaml  planck_class.yaml  planck_cosmopower.yaml  test_CPTcounterterms.yaml
pbj-multiz/: .gitignore  .gitlab-ci.yml  LICENSE  README.md  compute_bisp_multipoles.py  mkdocs.yml  pyproject.toml
pbj-multiz/docs/: bispectrum.md  getting_started.md  index.md  inputs.md  likelihood.md  likelihood_api.md  multiz.md  outputs.md  paramfile.md  pbj_api.md  power_spectrum.md  priors.md  samplers.md
pbj-multiz/docs/css/: material.css
pbj-multiz/examples/: example_theory.py
pbj-multiz/pbjcosmo/: PBJ.py  __init__.py  binningPBJ.py  fptplus.py  likelihoodPBJ.py  templatesPBJ.py  theoryPBJ.py  thoeypbj_old_fscaledep.py
pbj-multiz/pbjcosmo/config_default/: priors_cosmo.yaml
pbj-multiz/pbjcosmo/tools/: bispectrum_functions.py  cosmology.py  data_handler.py  param_handler.py  prior_handler.py
(+53 files in other folders)
